--- a/lesson15/homework/task2.html
+++ b/lesson15/homework/task2.html
@@ -13,7 +13,21 @@
 <img class="task1" src="images/2.png">
 <hr/>
 <div>
-    РЕШЕНИЕ ТУТ
+    <table class="task2">
+<caption>Добыча драгоценных камней</caption>
+  <tr>
+    <th></th><th>2010</th><th>2012</th><th>2014</th>
+  </tr>
+  <tr>
+    <td>Сапфиры</td><td rowspan="2">1483</td><td>4532</td><td>6743</td>
+  </tr>
+  <tr>
+    <td>Рубины</td><td>3835</td><td>7482</td>
+  </tr>
+  <tr>
+    <td>Алмазы</td><td>683</td><td colspan="2" style="text-align:center">238</td>
+  </tr>
+</table>
 </div>
 </body>
 </html>
