--- a/lesson15/homework/task3.html
+++ b/lesson15/homework/task3.html
@@ -15,7 +15,15 @@
 <img class="task" src="images/3-1.png">
 <hr/>
 <div>
-    РЕШЕНИЕ ТУТ
+    <table class="task3">
+      <tr>
+          <td class="black"></td>
+          <td class="deepskyblue"></td>
+          <td class="black"></td>
+          <td class="deepskyblue"></td>
+          <td class="black"></td>
+      </tr>
+    </table>
 </div>
 </body>
 </html>
