--- a/lesson15/homework/task2.html
+++ b/lesson15/homework/task2.html
@@ -25,7 +25,7 @@
     <td>Рубины</td><td>3835</td><td>7482</td>
   </tr>
   <tr>
-    <td>Алмазы</td><td>683</td><td colspan="2" style="text-align:center">238</td>
+    <td>Алмазы</td><td>683</td><td colspan="2" class="center">238</td>
   </tr>
 </table>
 </div>
